--- a/footer.html
+++ b/footer.html
@@ -201,8 +201,8 @@ body {
 
     <!-- CENTER: TEXT -->
     <p class="footer-text">
-      For more information, please visit
-      <a href="https://www.madcindia.org/" target="_blank">MADC India</a>
+      For more information, please visit at <span style="color: #d71920;">www.madcindia.org</span>
+      <!-- <a href="https://www.madcindia.org/" target="_blank">MADC India</a> -->
     </p>
 
     <!-- RIGHT: BACK BUTTON -->
