Clean repository without large video file

--- a/footer.html
+++ b/footer.html
@@ -196,7 +196,7 @@ body {
 
     <!-- LEFT: LOGO -->
     <div class="footer-logo">
-      <img src="assets/img/logo/logoMADC2.png" alt="MADC Logo">
+    <a href="index.html"><img src="assets/img/logo/logoMADC2.png" alt="MADC Logo"></a>
     </div>
 
     <!-- CENTER: TEXT -->
