--- a/pro-madc.html
+++ b/pro-madc.html
@@ -345,7 +345,36 @@
             .right-actions { bottom: 70px; top: auto; right: 0; left: 0; flex-direction: row; justify-content: center; transform: none; width: 100%; padding: 0 16px; gap: 12px; }
             .action-card { width: 46%; max-width: 220px; padding: 14px; }
             .map-wrapper { padding-bottom: 120px; } /* More space for mobile footer/actions */
-        }
+        } 
+        @media (max-width: 1200px), (max-height: 800px) {
+    .right-actions {
+        position: fixed;
+        bottom: 150px;          /* above footer */
+        left: 50%;
+        
+        transform: translateX(-50%);
+
+        flex-direction: row;  /* one line */
+        justify-content: center;
+        align-items: center;
+        gap: 24px;
+
+        width: auto;
+        right: auto;
+        top: auto;
+    }
+
+    .action-card {
+        width: 260px;
+        font-weight: 800;
+        padding: 20px;
+    }
+    .map-container {
+        width: 200vw;
+        max-height: calc(100vh - 220px); /* adjust for header and footer */
+    }
+}
+
         @media (max-width: 768px) and (orientation: portrait) {
             .map-wrapper { padding-top: 50px; align-items: center; }
             .map-container { width: 98vw; max-height: calc(100vh - 160px); }
