--- a/header-udan.html
+++ b/header-udan.html
@@ -219,9 +219,9 @@
                     </a>
                 </div>
                 
-                <button class="back-button-premium" onclick="goBack()">
+                <!-- <button class="back-button-premium" onclick="goBack()">
                     <i class="fas fa-arrow-left"></i> BACK
-                </button>
+                </button> -->
             </div>
         </div>
     </header>
